[package]
name = "python-oci-packager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
oci-spec = "0.7.1"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
typed-builder = "0.20.0"
zstd = "0.13.2"
toml = "0.8.19"
bincode = "1.3.3"
glob = "0.3"
hex-literal = "0.4.1"
